--- a/TalentCorp/TalentCorp.csproj
+++ b/TalentCorp/TalentCorp.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
       <PrivateAssets>all</PrivateAssets>
@@ -25,6 +26,16 @@
     <_ContentIncludedByDefault Remove="Views\Empleadoes\Details.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Empleadoes\Edit.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Empleadoes\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Candidatoes\Create.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Candidatoes\Delete.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Candidatoes\Details.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Candidatoes\Edit.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Candidatoes\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Puestos\Create.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Puestos\Delete.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Puestos\Details.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Puestos\Edit.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Puestos\Index.cshtml" />
   </ItemGroup>
 
 </Project>
