Filtro por puesto en candidatos y sort por nombre, apellido y fecha

--- a/TalentCorp/appsettings.json
+++ b/TalentCorp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "TalentCorpContext": "Server=DESKTOP-5NKH8M1;Database=TalentCorp;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite"
-    }
+  "ConnectionStrings": {
+    "TalentCorpContext": "Server=DABI\\SQLEXPRESS;Database=TalentCorp;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite"
+  }
 }
