--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/TalentCorp/appsettings.json
+/TalentCorp/appsettings.json
+/.gitignore
+/.gitignore
