--- a/TalentCorp/appsettings.json
+++ b/TalentCorp/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TalentCorpContext": "Server=DABI\\SQLEXPRESS;Database=TalentCorp;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite"
+    "TalentCorpContext": "Server=MSI;Database=TalentCorp;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite"
   }
 }
